--- a/resources/iphone/Info.plist
+++ b/resources/iphone/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>Substrate.png</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.heydaddio.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
