First return to Mac version. Seems to be working. Not sure about iPhone version. Still needs cleanup.

--- a/resources/mac/Info.plist
+++ b/resources/mac/Info.plist
@@ -23,6 +23,6 @@
 	<key>CFBundleVersion</key>
 	<string>1.0b1</string>
 	<key>NSPrincipalClass</key>
-	<string>HeySubstrateMacView</string>
+	<string>HeySubstrateView</string>
 </dict>
 </plist>
