--- a/resources/iphone/Info.plist
+++ b/resources/iphone/Info.plist
@@ -10,6 +10,11 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>Substrate.png</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Substrate.png</string>
+		<string>Substrate-iPad.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.heydaddio.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,11 +26,13 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0b1</string>
+	<string>1.0.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>NSMainNibFile~ipad</key>
+	<string>MainWindow-iPad</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
 </dict>
