--- a/resources/iphone/Info.plist
+++ b/resources/iphone/Info.plist
@@ -13,7 +13,11 @@
 	<key>CFBundleIconFiles</key>
 	<array>
 		<string>Substrate.png</string>
+		<string>Icon@2x.png</string>
 		<string>Substrate-iPad.png</string>
+		<string>Icon-Small.png</string>
+		<string>Icon-Small-50.png</string>
+		<string>Icon-Small@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.heydaddio.${PRODUCT_NAME:identifier}</string>
