--- a/SubstrateiPhone.xcodeproj/Info.plist
+++ b/SubstrateiPhone.xcodeproj/Info.plist
@@ -30,6 +30,8 @@
 	<string>MainWindow-iPad</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
